# InvariRank

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
configs/: dataset.yaml  rank.yaml  train.yaml
configs/data/: amazon_books.yaml  movielens.yaml
configs/dev/: smoke.yaml
configs/eval/: rank.yaml
configs/train/: train.yaml
datasets/: __init__.py  base.py  books.py  ml_32m.py  utils.py
docs/: configs.md  data_format.md  metrics.md  ranked_lists_schema.md  workflows.md
invarirank/: README.md  __init__.py  framework.py  modeling.py  permutations.py  prompts.py  training.py
model/: __init__.py  base.py  invarirank.py
prompts/: __init__.py  base.py  invarirank.py  zeroshot.py
prompts/templates/: invarirank.json  rankgpt.json  simple.json
ranking/: __init__.py  pipeline.py  scoring.py
research/: README.md  __init__.py  baselines.py  data.py  demo.py  evaluation.py  generation.py  prompts.py  run.py
research/configs/: candidates.yaml  evaluate.yaml  paper.yaml  rank.yaml  train.yaml
retriever/: lightgcn.py
scripts/: build_dataset.py  evaluate.py  evaluate_ranking.py  plot_figures.py  prepare_dataset.py  rank.py  run_ranking.py  smoke_check.py  train.py  train_model.py
src/invarirank/: config.py  smoke.py  utils.py
src/invarirank/data/: __init__.py  dataset.py  io.py  prompts.py
src/invarirank/data/preprocessing/: __init__.py  amazon.py  build.py  config_utils.py  movielens.py  retrievers.py  samplers.py  utils.py
src/invarirank/data/retrieval/: __init__.py  lightgcn.py
src/invarirank/modeling/: __init__.py  masks.py  model.py  positions.py  spans.py
src/invarirank/ranking/: pipeline.py  scoring.py
src/invarirank/training/: __init__.py  loop.py  losses.py
tests/: test_configs.py  test_masks.py  test_metrics.py  test_positions.py  test_prompts.py
training/: __init__.py  dataset.py  loop.py  losses.py  metrics.py
