[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invarirank"
version = "0.1.0"
description = "Position-invariant listwise reranking for LLM-based recommendation."
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datasets*", "model*", "prompts*", "ranking*", "retriever*", "training*"]

[tool.setuptools.package-data]
prompts = ["templates/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".venv",
    "venv",
    "data",
    "runs",
    "checkpoints",
    "fine-tuned",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []


[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
