[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invarirank"
version = "0.1.0"
description = "Position-invariant listwise reranking for LLM-based recommendation."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.3",
    "tqdm>=4.66",
    "transformers>=4.45",
]

[project.optional-dependencies]
train = [
    "accelerate>=0.33",
    "peft>=0.12",
]
research = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
    "scipy>=1.11",
    "ujson>=5.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["invarirank*"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".venv",
    "venv",
    "data",
    "runs",
    "checkpoints",
    "fine-tuned",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: optional tests that may download and load a small external model",
]
